Added comment box
As I told

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
 
   <p>
-     <div id="disqus_thread"></div>
-       <script>
+    <div id="disqus_thread"></div>
+  <script>
       /**
       *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
       *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
@@ -41,8 +41,11 @@
       s.setAttribute('data-timestamp', +new Date());
       (d.head || d.body).appendChild(s);
       })();
-       </script>
+  </script>
   </p>
+  <script id="dsq-count-scr" src="//web1-ctud8rnncf.disqus.com/count.js" async></script>
 
+  
 </body>
 </html>
+
