--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
   <title>WEB1 - Welcome</title>
   <meta charset="utf-8">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5B8GX5PD6D"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5B8GX5PD6D');
+</script>
+
 </head>
 <body>
   <p>"ol"태그와 "ul"태그의 차이 보려고 만든 예시</p>
