Added font color as red

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <li>3. Toure</li>
   </ul>
 
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html"><font color="red">WEB</font></a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JabaScript</a></li>
+    <li><a href="1.html"><font color="red">HTML</font></a></li>
+    <li><a href="2.html"><font color="red">CSS</font></a></li>
+    <li><a href="3.html"><font color="red">JabaScript</font></a></li>
   </ol>
 
   <h2>WEB이란 무엇인가?</h2>
@@ -76,4 +76,3 @@
 
 </body>
 </html>
-
