--- a/1.html
+++ b/1.html
@@ -3,25 +3,91 @@
 <head>
   <title>WEB1 - HTML</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
+
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5B8GX5PD6D"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5B8GX5PD6D');
+</script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="colors.js"></script>
+
+
 </head>
 <body>
 
   <h1><a href="index.html">WEB</a></h1>
-  <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JabaScript</a></li>
-  </ol>
+  <input type="button" value="night" onclick="
+    nightDayHandler(this);
+  ">
+  <div id="grid">
+      <ol>
+        <li><a href="1.html">HTML</a></li>
+        <li><a href="2.html">CSS</a></li>
+        <li><a href="3.html">JabaScript</a></li>
+      </ol>
 
-  <h2>HTML이란 무엇인가?</h2>
-  <p><a href="https://www.w3.org/TR/html52/" target="_blank" title="html5.2 specification">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.</p>
+      <div>
+        <h2>HTML이란 무엇인가?</h2>
+        <div id="article">
+          <p><a href="https://www.w3.org/TR/html52/" target="_blank" title="html5.2 specification">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.</p>
 
-  <p>2020.12. 21 I'm taking coding class at '생활코딩' recommended by '혜민님' a member of my start-up team</p>
+          <p>2020.12. 21 I'm taking coding class at '생활코딩' recommended by '혜민님' a member of my start-up team</p>
 
-  <br> I was working in a fireroom of Seoultech when took last classes. But, I'm taking it at home now.
+          <br> I was working in a fireroom of Seoultech when took last classes. But, I'm taking it at home now.
 
-  <p>and
-  <img src="HAY.jpg" width="60"></p>
-  <p style="margin-top:45px;">it's the picture what I made for a presentation we had last friday.</p>
+          <p>and
+          <img src="HAY.jpg" width="60"></p>
+          <p style="margin-top:45px;">it's the picture what I made for a presentation we had last friday.</p>
+        </div>
+      </div>
+  </div>
+
+  <p>
+    <div id="disqus_thread"></div>
+  <script>
+      /**
+      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+      /*
+      var disqus_config = function () {
+      this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      };
+      */
+      (function() { // DON'T EDIT BELOW THIS LINE
+      var d = document, s = d.createElement('script');
+      s.src = 'https://web1-ctud8rnncf.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+      })();
+  </script>
+  </p>
+  <script id="dsq-count-scr" src="//web1-ctud8rnncf.disqus.com/count.js" async></script>
+
+  <p>
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/5fe29cbadf060f156a8f7962/1eq6j8fbh';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
+  </p>
+
+
 </body>
 </html>
